[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "grader/__init__.py"

[project]
name = "grader"
description = "a Python module and command-line utility to grade applications"
authors = [{name = "Grader contributors"}]
keywords = ["grading applications"]
license = "GPL-3.0-or-later"
classifiers = [ 'Development Status :: 3 - Alpha',
                'Intended Audience :: Developers',
                'Topic :: Software Development :: Build Tools',
                'Programming Language :: Python :: 3',
]
urls = {Homepage = "https://github.com/ASPP/grader"}
requires-python = ">= 3.10"
dependencies = ['numpy',]
dynamic = ["version",]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.scripts]
grader = "grader.grader:main"

[tool.aliases]
test = "pytest"

[dependency-groups]
dev = [
    "pytest",
]
